<?xml version="1.0" encoding="utf-8"?>
<!--
  SicMu Player - Lightweight music player for Android
  Copyright (C) 2015  Mathieu Souchaud

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">SicMu Player</string>

    <string name="settings_version">1.4</string>

    <string name="action_settings">Settings</string>
    <string name="advanced_settings_title">Advanced settings</string>
    <string name="action_shake_disabled">Shake off</string>
    <string name="action_shake_enabled">Shake on</string>

    <string name="action_sort_folder">folder</string>
    <string name="action_sort_artist">artist</string>
    <string name="action_sort_tree">tree</string>
    <string name="action_sort_by">Sort by</string>
    <string name="action_sort">Sort songs by:</string>

    <string name="action_shuffle">Shuffle</string>
    <string name="action_no_shuffle">No shuffle</string>

    <string name="action_music_mode">Music mode</string>
    <string name="action_edit_mode">Edit mode</string>

    <string name="app_playing">SicMu playing</string>

    <string name="focus_error">Could not get audio focus! Restart the app!</string>

    <string name="settings_title">Settings</string>

    <string name="action_fold">Fold</string>
    <string name="action_unfold">Unfold</string>

    <string name="settings_song_view">Song view</string>
    <string name="settings_fold_title">Fold state on startup</string>
    <string-array name="settings_fold_entries">
        <item>Folded</item>
        <item>Unfolded</item>
    </string-array>
    <string-array name="settings_fold_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="settings_unfold_subgroup">Unfold subgroups</string>
    <string name="settings_unfold_subgroup_summary">If checked: tap on group unfold every subgroups and songs.</string>
    <string name="settings_unfold_subgroup_threshold">Unfold subgroups if group</string>
    <string name="settings_unfold_subgroup_threshold_default">18</string>
    <string name="settings_unfold_subgroup_threshold_summary">has less than %d songs</string>


    <string name="settings_song_view_font">Song view font</string>
    <string name="settings_text_size_choosed">Choose font size</string>
    <string name="settings_text_size_choosed_default">false</string>
    <string name="settings_text_size_regular">Small font</string>
    <string name="settings_text_size_regular_default">15</string>
    <string name="settings_text_size_big">Bold font</string>
    <string name="settings_text_size_big_default">19</string>
    <string name="settings_text_size_ratio">Group/song ratio text size</string>
    <string name="settings_text_size_ratio_default">1.1</string>

    <string name="settings_rescan_title">Rescan</string>
    <string name="settings_rescan">Rescan media files.</string>
    <string name="settings_rescan_key">RESCAN</string>
    <string name="settings_rescan_disabled">Rescan broadcast disabled from Android KitKat.</string>
    <string name="settings_rescan_triggered">Media Scanner Triggered...</string>
    <string name="settings_rescan_storage">Scan storage %s</string>
    <string name="settings_rescan_finished">Media Scanner finished. It can takes a while before the new files appears (SicmuPlayer needs to be restarted).</string>
    <string name="settings_rescan_purge">Media Scanner founds a file (%s) does that does not exists: delete it from MediaStore.</string>

    <string name="settings_media_button_start_app_title">Media buttons auto start</string>
    <string name="settings_media_button_start_app">Media buttons launch the app if not already started.</string>

    <string name="settings_autoscroll">Scroll to new song played</string>
    <string name="settings_autoscroll_summary">When song start playing, scroll to it</string>

    <string name="settings_songpos_title">Save song position</string>
    <string name="settings_songpos">At startup song will start from its last playing position.</string>

    <string name="settings_shuffle_title">Shuffle</string>
    <string name="settings_shuffle">Next song is chosen randomly</string>

    <string name="settings_scrobble_title">Scrobble</string>
    <string name="settings_scrobble">Send details of played tracks to Last.FM or Libre.FM (requires that Scrobble Droid or Simple Last.fm Scrobbler be installed)</string>

    <string name="settings_vibrate_title">Vibrate on touch</string>
    <string name="settings_vibrate">Make a small vibration when touching buttons or song list.</string>

    <string name="settings_root_folder">Root folders</string>
    <string name="settings_root_folder_summary">The path %s does not exists on the phone !</string>

    <string name="settings_accelerometer">Accelerometer shake</string>
    <string name="settings_accelerometer_summary">Go to next song when shaked.</string>
    <string name="settings_accelerometer_threshold">Shake force threshold</string>
    <string name="settings_default_shake_threshold">100</string>
    <string name="settings_no_accelerometer">Your device has no accelerometer. Shake functionality is disabled.</string>


    <string name="settings_help">Help</string>
    <string name="settings_help_summary">If you are a bit lost.</string>

    <string name="help_start_song">Start playing song</string>
    <string name="help_start_song_summary">Tap on a song to start it.</string>
    <string name="help_start_group">Start playing from a group</string>
    <string name="help_start_group_summary">Long tap on a group to start the first song it contains.</string>
    <string name="help_next_group">Long tap on next</string>
    <string name="help_next_group_summary">Long click on next will start playing next group (same for previous group)</string>
    <string name="help_unfold_group">Fold / unfold group</string>
    <string name="help_unfold_group_summary">Tap on a group to fold / unfold it.</string>
    <string name="help_scroll">Scroll to current song</string>
    <string name="help_scroll_summary">Press the button to the right of \'next button\' to scroll the list to current playing song. Long tap fold everything except current song.</string>
    <string name="help_lock">Disable lock screen</string>
    <string name="help_lock_summary">Open the padlock button to disable the lock screen (it prevents locking only when the app is on foreground; do not work on some device).</string>
    <string name="help_root_folders">Root folders</string>
    <string name="help_root_folders_summary">Root folders can be customized from advanced settings: it is used only for hiding the first portion of folders path when songs are sorted by folder. To put several root folders, separate path using a semi-colon.</string>
    <string name="help_background">Background</string>
    <string name="help_background_summary">While playing music, press on home button or back button to close the song list and keep the music playing in background.</string>
    <string name="help_quit">Quit</string>
    <string name="help_quit_summary">The app should be killed if no song is playing and back button is pressed. If not, Android will automatically kill it when memory is under pressure.</string>
    <string name="help_stop">Stop</string>
    <string name="help_stop_summary">The app should remain in memory if no song is playing and home button is pressed, but Android will automatically kill it when memory is under pressure.</string>
    <string name="help_mediabutton">Media buttons</string>
    <string name="help_mediabutton_summary">Media buttons (like in bluetooth headphones) can control the app (next, prev, pause/play).</string>
    <string name="help_mediabutton_autostart">Media buttons auto start</string>
    <string name="help_mediabutton_autostart_summary">If the app is closed media button will start it. To disable media button ability to start the app automatically uncheck settings->media buttons auto start.</string>
    <string name="help_details_menu">Song details (covert art, ...)</string>
    <string name="help_details_menu_summary">Tap on Sicmu\'s icon to show current song details (album\'s cover art, ...)</string>
    <string name="help_seek_menu">Seek menu</string>
    <string name="help_seek_menu_summary">Click at the top right to open seek menu. Long tap on next/prev will seek forward or backward continuously.</string>


    <string name="settings_misc">Miscellaneous</string>

    <string name="settings_about">About</string>
    <string name="settings_about_summary">Some info on app and author.</string>

    <string name="settings_version_title">Version number</string>
    <string name="settings_author_title">Author</string>
    <string name="settings_author">Mathieu Souchaud</string>
    <string name="settings_source_title">Sources</string>
    <string name="settings_source">https://github.com/souch/SMP</string>
    <string name="settings_licence_title">License</string>
    <string name="settings_licence">GPLv3</string>
    <string name="settings_donate_key">donate</string>
    <string name="settings_donate_title">Donate</string>
    <string name="settings_donate_summary">Click here if life will be hard for you without this app.</string>
    <string name="settings_donate_www">http://rodolphe.souchaud.free.fr/donate</string>

    <string name="settings_thanks">Special thanks</string>
    <string name="settings_thanks_icons">Icons</string>
    <string name="settings_thanks_icons_summary">Daniele De Santis &amp; WPZOOM (icons found on iconfinder.com)</string>
    <string name="settings_thanks_doc">Tutorial</string>
    <string name="settings_thanks_doc_summary">Sue Smith (tutorials on creating a Music Player on Android)</string>
    <string name="settings_thanks_i15n">Translation</string>
    <string name="settings_thanks_i15n_summary">Mladen Pejaković (Serbian), Jerônimo Cordoni Pellegrini (Portuguese), Mehmet Gülmen (Turkish)</string>
    <string name="settings_locked">Locked</string>
    <string name="settings_unlocked">Unlocked</string>

    <string name="action_repeat_title">Repeat</string>
    <string name="action_repeat_all">All</string>
    <string name="action_repeat_one">Track</string>
    <string name="action_repeat_first_group">First group</string>
    <string name="action_repeat_group">Group</string>
    <string name="state_repeat_all">Repeat all</string>
    <string name="state_repeat_one">Repeat track</string>
    <string name="state_repeat_group">Repeat group</string>


</resources>
