<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".main">

    <!--
    icon ic_menu_settings, ic_menu_shake
    done by WPZOOM (Creative Commons (Attribution-Share Alike 3.0 Unported))
    found on iconfinder.com. Color and dimension has been changed.
    -->
    <item android:id="@+id/action_shake"
        android:icon="@drawable/ic_menu_shake"
        android:title="@string/action_shake_disabled"/>

    <item android:id="@+id/action_fold"
        android:title="@string/action_fold" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_menu_settings" />

    <item android:id="@+id/action_sort_artist"
        android:title="Sort by artist"
        android:icon="@drawable/ic_menu_artist"
        android:checkable="true"
        />

    <!-- icon ic_menu_folder done by ionicons (MIT license) found on iconfinder.com -->
    <item android:id="@+id/action_sort_folder"
        android:title="Sort by folder"
        android:icon="@drawable/ic_menu_folder"
        android:checkable="true"
        />

</menu>
